[gd_scene load_steps=16 format=2]

[ext_resource path="res://art/pexels-brianna-martinez-3708717-pixelized.jpg" type="Texture" id=1]
[ext_resource path="res://Snail.tscn" type="PackedScene" id=2]
[ext_resource path="res://Rain.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://Umbrella.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/audio/5231e324-3708-4fd0-9989-c20d3ee9982d_396484__macdaddyno1__big-rain-drops-1.mp3" type="AudioStream" id=6]
[ext_resource path="res://art/fonts/Pangolin-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://TitleLabel.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 27
font_data = ExtResource( 7 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 40.0
height = 440.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 100, 20 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 540, 20 )

[sub_resource type="DynamicFont" id=6]
size = 56
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16, 48 )

[node name="Main" type="Node2D"]
script = ExtResource( 4 )
rain_scene = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.678431, 0.678431, 0.678431, 1 )
position = Vector2( 512, -104 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="TitleLabel" type="Label" parent="."]
margin_left = 420.0
margin_top = 60.0
margin_right = 956.0
margin_bottom = 220.0
custom_fonts/font = SubResource( 1 )
text = "Snail Care"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="byTchapLabel" type="Label" parent="TitleLabel"]
margin_left = 400.0
margin_top = 140.0
margin_right = 495.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 2 )
text = "by tchap"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="TitleLabel"]

[node name="Area2D" type="Area2D" parent="TitleLabel"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TitleLabel/Area2D"]
position = Vector2( 260, 80 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Protections" type="Node" parent="."]

[node name="StartRoof" type="Node2D" parent="Protections"]
position = Vector2( -60, 400 )

[node name="ColorRect" type="ColorRect" parent="Protections/StartRoof"]
margin_top = 20.0
margin_right = 200.0
margin_bottom = 60.0
color = Color( 0.494118, 0.305882, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="Protections/StartRoof"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Protections/StartRoof/Area2D"]
position = Vector2( 100, 0 )
shape = SubResource( 4 )

[node name="StartLeftWall" type="Node2D" parent="Protections"]
position = Vector2( -40, 400 )
rotation = 1.5708

[node name="ColorRect" type="ColorRect" parent="Protections/StartLeftWall"]
margin_top = 20.0
margin_right = 200.0
margin_bottom = 60.0
color = Color( 0.494118, 0.305882, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="Protections/StartLeftWall"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Protections/StartLeftWall/Area2D"]
position = Vector2( 60, 40 )
shape = SubResource( 4 )

[node name="GroundFloor" type="Node2D" parent="Protections"]
position = Vector2( 420, 560 )

[node name="ColorRect" type="ColorRect" parent="Protections/GroundFloor"]
margin_left = -420.0
margin_top = 40.0
margin_right = 620.0
margin_bottom = 80.0
color = Color( 0.494118, 0.305882, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="Protections/GroundFloor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Protections/GroundFloor/Area2D"]
position = Vector2( 100, 20 )
shape = SubResource( 5 )

[node name="EndRoof" type="Node2D" parent="Protections"]
position = Vector2( 840, 400 )

[node name="ColorRect" type="ColorRect" parent="Protections/EndRoof"]
margin_top = 20.0
margin_right = 200.0
margin_bottom = 60.0
color = Color( 0.494118, 0.305882, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="Protections/EndRoof"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Protections/EndRoof/Area2D"]
position = Vector2( 100, 20 )
shape = SubResource( 4 )

[node name="RainSpawnTimer" type="Timer" parent="."]
wait_time = 0.01
autostart = true

[node name="RaindropsBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="FadeOut" type="Node2D" parent="."]
visible = false
z_index = 5

[node name="FadeOutBlack" type="ColorRect" parent="FadeOut"]
margin_right = 1140.0
margin_bottom = 660.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeOutTween" type="Tween" parent="FadeOut"]

[node name="ThankYouLabel" type="Label" parent="FadeOut"]
visible = false
modulate = Color( 0.901961, 0.811765, 0, 1 )
margin_left = 560.0
margin_top = 400.0
margin_right = 801.0
margin_bottom = 471.0
custom_fonts/font = SubResource( 6 )
text = "thank you."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Umbrella" parent="." instance=ExtResource( 5 )]
position = Vector2( 100, 300 )

[node name="GrabUmbrella" type="Area2D" parent="Umbrella"]
scale = Vector2( 1.25, 1.25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Umbrella/GrabUmbrella"]
position = Vector2( -7.62939e-06, 32 )
shape = SubResource( 7 )

[node name="Snail" parent="." instance=ExtResource( 2 )]
position = Vector2( 40, 568 )
scale = Vector2( 2, 2 )
z_index = 10

[connection signal="tween_all_completed" from="TitleLabel/Tween" to="TitleLabel" method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="RainSpawnTimer" to="." method="make_rain"]
[connection signal="tween_all_completed" from="FadeOut/FadeOutTween" to="." method="_on_FadeOutTween_tween_all_completed"]
[connection signal="mouse_entered" from="Umbrella/GrabUmbrella" to="." method="_on_GrabUmbrella_mouse_entered"]
[connection signal="win" from="Snail" to="." method="_on_Snail_win"]
